fixing alignment on presave link

--- a/styles.css
+++ b/styles.css
@@ -728,9 +728,9 @@ footer {
 }
 
 .presave {
+  display: flex;
   width: 100%;
   height: 170px;
-  margin-bottom: -6px;
   border-bottom: solid 1px #800a32;
 }
 
